--- a/.github/workflows/serviceaccounts.yml
+++ b/.github/workflows/serviceaccounts.yml
@@ -42,7 +42,7 @@
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-name: 'Terraform - service accounts'
+name: 'service accounts us-central1-DEV'
 
 on:
   workflow_dispatch:
